# roadmap-synth

./: .env.example  .gitignore  AGENTIC_CHUNKING_SPEC.md  ARCHITECTURE_REVIEW.md  ASK_YOUR_ROADMAP_SPEC.md  CHUNKING_AND_GRAPH_SPEC.md  CI_CD_INTEGRATION_COMPLETE.md  CI_CD_SETUP.md  COMPETITIVE_INTELLIGENCE_SPEC_REVISED.md  CONVERSATIONAL_FILTERING_SPEC.md  DOCUMENT_IMPACT_ASSESSMENT_SPEC.md  FIX_UNIFIED_GRAPH_RETRIEVAL_SPEC.md  HOLISTIC_QUESTION_GENERATION_SPEC.md  OPEN_QUESTIONS_SPEC.md  PHASE1_PROGRESS.md  QUICK_WINS_SPEC.md  QUICK_WIN_7_QUESTION_SOURCES_SPEC.md  QUICK_WIN_7_REVISED_DYNAMIC_SOURCES.md  QUICK_WIN_8_VIEW_ORIGINAL_DOCUMENT.md  RCHITECTURE_ALIGNMENT_SPEC.md  README.md  SAVE_QA_TO_QUESTIONS_SPEC.md  SKILL_ARCHITECTURAL_REVIEW.md  STREAMLIT_APP_INSTRUCTIONS.md  STREAMLIT_UI_COMPREHENSIVE_SPEC.md  TEST_SUITE_SUMMARY.md  UNIFIED_CONTEXT_GRAPH_SPEC.md  UPDATED_SYNTHESIS_PROMPT_SPEC.md  app.py  fix_phase1_tests.patch  main.py  pyproject.toml  pytest.ini  roadmap.py  test_graph_diagnostic.py  test_semantic_edges.py  test_sync_and_diagnose.py
.github/: CONTRIBUTING.md
.github/workflows/: quick-test.yml  test.yml
data/: chunking_log.jsonl  debug_response.txt
data/questions/: questions.json
data/unified_graph/: assessment_nodes.json  gap_nodes.json  (+3 more)
output/: architecture-alignment.json  engineering_roadmap.md  executive_roadmap.md  master_roadmap.md  product_roadmap.md
prompts/: synthesis.md
tests/: README.md  conftest.py  test_agentic_chunking.py  test_batch_similarity.py  test_chunking.py  test_cli_commands.py  test_document_parsing.py  test_embeddings.py  test_graph.py  test_graph_sync.py  test_integration.py  test_qa_functions.py  test_retrieval.py  test_retrieval_advanced.py  test_synthesis.py  test_utilities.py
(+256 files in other folders)
