[project]
name = "roadmap-synth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.75.0",
    "lancedb>=0.26.1",
    "networkx>=3.6.1",
    "numpy>=2.4.0",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.2",
    "tiktoken>=0.12.0",
    "typer[all]>=0.21.0",
    "unstructured[all-docs]>=0.18.24",
    "voyageai>=0.3.7",
]
